--- a/docker/db/master.conf
+++ b/docker/db/master.conf
@@ -3,3 +3,8 @@ server-id=1
 log_bin = /var/lib/mysql/binlog.log
 binlog_do_db = fbng_db
 bind-address = 0.0.0.0
+binlog-format=ROW
+binlog-checksum=crc32
+gtid-mode=on
+enforce-gtid-consistency=true
+log-slave-updates=true
