--- a/docker/db/slave.conf
+++ b/docker/db/slave.conf
@@ -4,3 +4,8 @@ log_bin = /var/lib/mysql/binlog.log
 binlog_do_db = fbng_db
 replicate_do_db = fbng_db
 bind-address = 0.0.0.0
+binlog-format=ROW
+binlog-checksum=crc32
+gtid-mode=on
+enforce-gtid-consistency=true
+log-slave-updates=true
